syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "github.com/duc-cnzj/mars/client/container_copy;container_copy";

message CopyToPodRequest {
  int64 file_id = 1;
  string namespace = 2;
  string pod = 3;
  string container = 4;
}

message CopyToPodResponse {
  string podFilePath = 1;
  string output = 2;
}

service ContainerCopy {
  rpc CopyToPod(CopyToPodRequest) returns (CopyToPodResponse) {
    option (google.api.http) = {
      post: "/api/container_copy/copy_to_pod",
      body: "*"
    };
  }
}
